--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer components {
+  .btn1 {
+    background-color: #203A4C;
+  }
+  .btn2 {
+    background-color: #000000;
+    opacity: 0.1;
+    mix-blend-mode: normal;
+  }
+};
