--- a/src/input.css
+++ b/src/input.css
@@ -14,7 +14,7 @@
     font-size: 0.75rem;
     line-height: 0.875rem;
     letter-spacing: 0.125rem;
-    color: white;
+    color: #FFFFFF;
   }
   .btn-text-black {
     font-size: 0.75rem;
