--- a/src/input.css
+++ b/src/input.css
@@ -20,7 +20,7 @@
     font-size: 0.75rem;
     line-height: 0.875rem;
     letter-spacing: 0.125rem;
-    color: black;
+    color: #33323D;
   }
   .border-opacity {
     border-color: rgba(51, 50, 61, 0.15)
